<resources>

    <string name="banner_ad_unit_id">ca-app-pub-5255794757983274/6179521318</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-5255794757983274/9132987717</string>

    <string name="app_name">Saxion Roosters</string>
    <string name="app_name_short">Roosters</string>

    <!-- items -->
    <string name="item_removed">Item removed</string>

    <!-- Basic texts -->
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="dismiss">Close</string>
    <string name="loading">Loading...</string>
    <string name="this_week">This week</string>
    <string name="free_day">Nothing to show</string>
    <string name="no_results">No search results.</string>
    <string name="search_hint">Search for group or teacher</string>
    <string name="teacher_text">Teacher:</string>
    <string name="teachers_text">Teachers:</string>
    <string name="no_teachers">No supervision</string>
    <string name="change_class">Change group:</string>
    <string name="teachers">Teacher(s)</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="time_and_location">Time &amp; Location</string>
    <string name="description">Description</string>
    <string name="settings">Settings</string>
    <string name="schedule_select">Select schedule</string>
    <string name="room">room</string>
    <string name="floor">floor</string>
    <string name="location_not_found">Location unknown</string>


    <string name="theme_visible_after_reset">The theme will be applied after you force reset the Application.</string>
    <string name="theme_color">Theme color</string>
    <string name="pick_theme">Pick a theme</string>
    <!-- Dialog texts -->
    <string name="error_title_no_internet">No internet connection</string>
    <string name="error_message_no_internet">Try again later. Please contact the developers if the problem persists.</string>

    <string name="dialog_info_title">About Saxion Roosters</string>
    <string name="dialog_info_message">Saxion Roosters is an app developed by students of Saxion University of Applied Sciences. Saxion was not involved in the development of this app. \n\nThe source code is published on GitHub under the BSD open source license. You can contribute to this app! Create an issue/pull request on GitHub or contact us by mail. \n\nCredits: \n\u25CF Jelle ten Brinke \n\u25CF Hugo Olthof</string>

    <!-- Feedback dialog -->
    <string name="feedback">Feedback</string>
    <string name="feedback_message">What do you think of the app? Let us know and/or contribute yourself!</string>
    <string name="feedback_dislike_message">We want to have your opinion!</string>
    <string name="like">Like</string>
    <string name="contact">Contact</string>
    <string name="dislike">Dislike</string>
    <string name="support_request_message">We would like to hear from you!</string>
    <string name="support_email" translatable="false">saxionroosters.dev@gmail.com</string>
    <string name="support">Support</string>

    <!-- Rate dialog -->
    <string name="rate_my_app">Are you happy with app? Help us by rating the app! \n\nDid you know that everyone is eligible to contribute to this app? Check out our GitHub(SaxionRoosters) or contact us by mail. </string>
    <string name="rate">Rate</string>
    <string name="ofcourse">Yes, ofcourse</string>
    <string name="no_thanks">No</string>
    <string name="maybe_later">Later</string>
    <string name="contact_me">Contact</string>

    <!-- Intro texts -->
    <string name="intro_title_1">Your schedule at hand</string>
    <string name="intro_subtitle_1">Super easy, always your schedule with you. Created with \u2665 by students, for students &amp; teachers of Saxion University of Applied Sciences.</string>
    <string name="intro_title_2">Community</string>
    <string name="intro_subtitle_2">Designers, developers, creative thinkers and do-ers gather yourselves!  Community oriented &amp; opensource code, you decide the next step of this app!</string>
    <string name="intro_title_3">Never too late</string>
    <string name="intro_subtitle_3">Notificaties helpen je bij het op tijd komen voor een college. Stel ze in per college en krijg vlak van te voren een reminder. Zo kom je nooit meer te laat (toch?!).</string>
    <string name="intro_title_4">Selective</string>
    <string name="intro_subtitle_4">Geen overvolle Google Calendar meer. Niet elk college is voor jou interessant. Daarom kan je colleges selectief importeren in Google Calendar.</string>
    <string name="getting_started">Getting started</string>
    <string name="setup_select_group_teacher">Select the schedule you want to see when you launch. Afterwards you can always change this through settings.</string>
    <string name="intro_title_5">Locations</string>
    <string name="intro_subtitle_5">Lost? You can now also check your college location.</string>

    <string name="action_info">info</string>
    <string name="action_settings">settings</string>
    <string name="action_search">search</string>
    <string name="action_intro">intro</string>
    <string name="action_feedback">feedback</string>

    <string name="activity_college_details_subtitle">College details</string>

    <string name="no_teacher_available">No teachers scheduled.</string>

    <string name="error_intro_select_startup_owner">First select/search your group or teacher to continue.</string>

    <!-- Setting texts -->
    <string name="setting_startup_owner_title">Schedule after launch</string>
    <string name="setting_startup_owner_subtitle">No schedule selected.</string>
    <string name="title_activity_maps">Map</string>

    <string-array name="theme_colors">
        <item>Saxion Theme</item>
        <item>Purple</item>
        <item>Deep Purple</item>
        <item>Red</item>
        <item>Pink</item>
        <item>Indigo</item>
        <item>Blue</item>
        <item>LightBlue</item>
        <item>Cyan</item>
        <item>Teal</item>
        <item>Green</item>
        <item>Light Green</item>
        <item>Lime</item>
        <item>Light Yellow</item>
        <item>Yellow</item>
        <item>Orange</item>
        <item>Deep Orange</item>
        <item>Grey</item>
        <item>Blue Grey</item>
        <item>Brown</item>
    </string-array>


</resources>
