<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="dev.saxionroosters.activities.MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_feedback" android:title="@string/action_feedback"
        android:orderInCategory="100" app:showAsAction="never" />


    <item android:id="@+id/action_info" android:title="@string/action_info"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_intro" android:title="@string/action_intro"
        android:orderInCategory="100" app:showAsAction="never" />



    <item android:id="@+id/action_search" android:title="@string/action_search" android:icon="@drawable/magnify" android:orderInCategory="100" app:showAsAction="ifRoom"/>
</menu>
